<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panda_gz_ros2_ctrl</name>
  <version>0.1.0</version>
  <description>This example package demonstrates how to control a Panda manipulator in Gazebo Sim using ROS 2 position control (pos2_control), with topic bridging powered by ros_gz_bridge.</description>
  <maintainer email="lexmaister@gmail.com">lexmaister</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>controller_manager</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
