<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mtc_python_test</name>
  <version>0.0.0</version>
  <description>Tutorial package with basic MoveIt Task Constructor usage in pick and place operation</description>
  <maintainer email="lexmaister@gmail.com">lexmaister</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_task_constructor_core</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
